fixed z-index from header

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -8,6 +8,7 @@ header {
 
   position: sticky;
   top: -4.125rem;
+  z-index: 20;
 
   .logo {
     margin-top: 4.5rem;
